ligolang/src/test/contracts/negative/parametric_types4.ligo
type x is list(option)